fix: whitespace at top in qr-code-component

--- a/projects/qr-code-component/style.css
+++ b/projects/qr-code-component/style.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Outfit', sans-serif;
 }
 
+header {
+  display: none;
+}
+
 main {
   min-height: 100vh;
   background-color: hsl(212, 45%, 89%);
